[prac-spring-mc-ecom-2025-b01] [microservice-spring3-new] 09. Basic implement angular project connecting with api